<?xml version="1.0"?>
<package format="3">
  <name>odas_classifier</name>
  <version>0.1.0</version>
  <description>Example ODAS classifier package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclpy</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>

  <export>
    <!-- Указываем, что это Python-пакет (build_type) -->
    <build_type>ament_python</build_type>
  </export>
</package>
