<package format="3">
  <name>sound_costmap_plugin</name>
  <version>0.0.1</version>
  <description>Costmap layer plugin for handling sound sources</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>odas_classifier_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>odas_classifier_msgs</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
